--- a/style.css
+++ b/style.css
@@ -83,10 +83,12 @@ body {
   flex-direction: column;
   background-color: rgba(220, 220, 220, 0.6);
 }
-P{
+.score{
   text-align: center;
-  font-size:25px;
   margin:0;
   padding:0;
   color:#555;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
 }
